SEM-10: correcy=t image overflow nature page + lots of other corrections

--- a/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_BrandHistory.scss
+++ b/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_BrandHistory.scss
@@ -78,7 +78,7 @@
     @include make-cols(4);
 
     @include media-breakpoint-up('md') {
-      @include make-cols(4, 2);
+      @include make-cols(4, 1);
     }
   }
 
@@ -137,7 +137,8 @@
   }
 
   @include media-breakpoint-up('md') {
-    @include make-cols(4, 6);
+    @include make-cols(4, 7);
+    min-height: rem(220px);
   }
 }
 
