--- a/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_ProductFamily.scss
+++ b/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_ProductFamily.scss
@@ -73,7 +73,7 @@
     @include make-cols(4);
 
     @include media-breakpoint-up('md') {
-      @include make-cols(4, 2);
+      @include make-cols(4, 1);
     }
   }
 
@@ -132,7 +132,8 @@
   }
 
   @include media-breakpoint-up('md') {
-    @include make-cols(4, 6);
+    @include make-cols(4, 7);
+    min-height: rem(220px);
   }
 }
 
