--- a/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_ProductTeaser.scss
+++ b/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_ProductTeaser.scss
@@ -15,9 +15,14 @@
     width: 100%;
     height: auto;
     transition: transform 2s;
+    aspect-ratio: 0.738;
 
     .ProductTeaser:hover & {
       transform: scale(1.1);
+    }
+
+    .OurProducts-list.has-twoCols & {
+      aspect-ratio: 1.128;
     }
   }
 }
@@ -30,5 +35,6 @@
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: 1;
   }
 }
